Fix wrong font paths

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -10,9 +10,9 @@
 	font-style: normal;
 	font-weight: 400;
 	src: local('Helmet Neue Regular'), local('HelmetNeue-Regular'),
-	     url('../assets/fonts/helmet-neue-regular.woff2') format('woff2'),
-	     url('../assets/fonts/helmet-neue-regular.woff') format('woff'),
-	     url('../assets/fonts/helmet-neue-regular.otf') format('opentype');
+	     url('assets/fonts/helmet-neue-regular.woff2') format('woff2'),
+	     url('assets/fonts/helmet-neue-regular.woff') format('woff'),
+	     url('assets/fonts/helmet-neue-regular.otf') format('opentype');
 	font-display: swap;
 }
 
@@ -23,9 +23,9 @@
 	font-family: CantarellVariable;
 	font-style: normal;
 	font-weight: 100 900;
-	src: url('../assets/fonts/cantarell-variable.woff2') format('woff2'),
-	     url('../assets/fonts/cantarell-variable.woff') format('woff'),
-	     url('../assets/fonts/cantarell-variable.otf') format('opentype');
+	src: url('assets/fonts/cantarell-variable.woff2') format('woff2'),
+	     url('assets/fonts/cantarell-variable.woff') format('woff'),
+	     url('assets/fonts/cantarell-variable.otf') format('opentype');
 	font-display: swap;
 }
 
@@ -37,9 +37,9 @@
 	font-style: normal;
 	font-weight: 100;
 	src: local('Cantarell Thin'), local('Cantarell-Thin'),
-	     url('../assets/fonts/cantarell-thin.woff2') format('woff2'),
-	     url('../assets/fonts/cantarell-thin.woff') format('woff'),
-	     url('../assets/fonts/cantarell-thin.otf') format('opentype');
+	     url('assets/fonts/cantarell-thin.woff2') format('woff2'),
+	     url('assets/fonts/cantarell-thin.woff') format('woff'),
+	     url('assets/fonts/cantarell-thin.otf') format('opentype');
 	font-display: swap;
 }
 
@@ -48,9 +48,9 @@
 	font-style: normal;
 	font-weight: 300;
 	src: local('Cantarell Light'), local('Cantarell-Light'),
-	     url('../assets/fonts/cantarell-light.woff2') format('woff2'),
-	     url('../assets/fonts/cantarell-light.woff') format('woff'),
-	     url('../assets/fonts/cantarell-light.otf') format('opentype');
+	     url('assets/fonts/cantarell-light.woff2') format('woff2'),
+	     url('assets/fonts/cantarell-light.woff') format('woff'),
+	     url('assets/fonts/cantarell-light.otf') format('opentype');
 	font-display: swap;
 }
 
@@ -59,9 +59,9 @@
 	font-style: normal;
 	font-weight: 400;
 	src: local('Cantarell Regular'), local('Cantarell-Regular'),
-	     url('../assets/fonts/cantarell-regular.woff2') format('woff2'),
-	     url('../assets/fonts/cantarell-regular.woff') format('woff'),
-	     url('../assets/fonts/cantarell-regular.otf') format('opentype');
+	     url('assets/fonts/cantarell-regular.woff2') format('woff2'),
+	     url('assets/fonts/cantarell-regular.woff') format('woff'),
+	     url('assets/fonts/cantarell-regular.otf') format('opentype');
 	font-display: swap;
 }
 
@@ -70,9 +70,9 @@
 	font-style: normal;
 	font-weight: 700;
 	src: local('Cantarell Bold'), local('Cantarell-Bold'),
-	     url('../assets/fonts/cantarell-bold.woff2') format('woff2'),
-	     url('../assets/fonts/cantarell-bold.woff') format('woff'),
-	     url('../assets/fonts/cantarell-bold.otf') format('opentype');
+	     url('assets/fonts/cantarell-bold.woff2') format('woff2'),
+	     url('assets/fonts/cantarell-bold.woff') format('woff'),
+	     url('assets/fonts/cantarell-bold.otf') format('opentype');
 	font-display: swap;
 }
 
@@ -81,8 +81,8 @@
 	font-style: normal;
 	font-weight: 800;
 	src: local('Cantarell Extra Bold'), local('Cantarell-ExtraBold'),
-	     url('../assets/fonts/cantarell-extra-bold.woff2') format('woff2'),
-	     url('../assets/fonts/cantarell-extra-bold.woff') format('woff'),
-	     url('../assets/fonts/cantarell-extra-bold.otf') format('opentype');
+	     url('assets/fonts/cantarell-extra-bold.woff2') format('woff2'),
+	     url('assets/fonts/cantarell-extra-bold.woff') format('woff'),
+	     url('assets/fonts/cantarell-extra-bold.otf') format('opentype');
 	font-display: swap;
 }
